# pathjson

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-lint-on-pr.yaml  unit-test.yaml
src/pathjson/: __init__.py  _nodes.py  builders.py  exceptions.py
tests/: test_jsonify_function_builder.py
