[metadata]
name = pathjson
version = 0.1.0
author = Ke Xue
author_email = xueke.kent@gmail.com
description = Assemble JSONPath-value pairs back to JSON object.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:

[options.packages.find]
where = src

[options.package_data]
pathjson = py.typed
